node/overseer/orchestra/tests/ui/err-01-duplicate-consumer.stderr
error[E0119]: conflicting implementations of trait `polkadot_overseer_gen::SubsystemSender<MsgStrukt>` for type `OverseerSubsystemSender`
  --> tests/ui/err-01-duplicate-consumer.rs:19:1
   |
19 | #[orchestra(signal=SigSigSig, event=Event, gen=AllMessages, error=OverseerError)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | first implementation here
   | conflicting implementation for `OverseerSubsystemSender`
   |
   = note: this error originates in the attribute macro `orchestra` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `std::convert::From<MsgStrukt>` for type `AllMessages`
  --> tests/ui/err-01-duplicate-consumer.rs:19:1
   |
19 | #[orchestra(signal=SigSigSig, event=Event, gen=AllMessages, error=OverseerError)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | first implementation here
   | conflicting implementation for `AllMessages`
   |
   = note: this error originates in the attribute macro `orchestra` (in Nightly builds, run with -Z macro-backtrace for more info)
